Actor details page + some fixes (dark mode navbar, bg)

--- a/my-app/src/css/MovieDetails.css
+++ b/my-app/src/css/MovieDetails.css
@@ -25,7 +25,6 @@
   width: 100%;
   height: 100%;
   backdrop-filter: blur(8px);
-  background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.5));
   z-index: -1;
 }
 
