--- a/my-app/src/css/Navbar.css
+++ b/my-app/src/css/Navbar.css
@@ -1,15 +1,32 @@
 .navbar {
   height: 60px;
-  background-color: #ffffff;
   position: relative;
-
-
   position: sticky;
   z-index: 999;
   top: 0;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  
   padding: 10px;
 }
+
+.light .navbar {
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+.light .navbar {
+  background-color: #ffffff;
+}
+
+.dark .navbar {
+  background-color: #444;
+  color:#ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.dark .navbar {
+  box-shadow: 0 2px 6px rgba(255, 255, 255, 0.2);
+}
+
+
 
 .navbar-container {
   max-width: 1100px;
@@ -47,19 +64,19 @@
 
 .navbar-link {
   margin-right: 20px;
-  color: #333;
   font-weight: 400;
   text-decoration: none;
   font-size: 18px;
   transition: opacity 0.3s ease-in-out;
 }
-/**/
-.nav-elements .navbar-link a.active {
-  color: #a82626;
-  font-weight: 600;
-  position: relative;
+
+.light .navbar-link {
+  color: #333;
 }
-/**/
+
+.dark .navbar-link {
+  color: #cecece;
+}
 
 .navbar-link:hover {
   opacity: 0.8;
@@ -133,16 +150,14 @@
   cursor: pointer;
 }
 
+.dark .search-button, .dark .search-input, .dark .navbar .logo, .dark .menu-icon{
+  filter: invert(1);
+}
+
 .search-button svg {
   color: #333;
   font-size: 24px;
 }
-/*
-@media (max-width: 768px) {
-  .nav-elements div:not(:last-child) {
-    margin-right: 30px;
-  }
-}*/
 
 @media (max-width: 600px) {
   .menu-icon {
@@ -154,7 +169,7 @@
     position: absolute;
     right: 0;
     top: 83px;
-    background: linear-gradient(to right, #ffffff, #dfdede ); /* Gradient */
+    
     width: 0px;
     height: 80vh;
     transition: all 0.3s ease-in;
@@ -162,6 +177,14 @@
     flex-direction: column;
     justify-content:flex-start;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  }
+
+  .light .nav-elements {
+    background-color: #e9e9e9;
+  }
+
+  .dark .nav-elements {
+    background-color: #444;
   }
 
   .nav-elements.active {
